[gd_scene load_steps=11 format=3 uid="uid://dj4dvmhat4wn2"]

[ext_resource type="Script" uid="uid://bt0gq6uiwpciu" path="res://Scripts/game_menu.gd" id="1_in7i6"]
[ext_resource type="FontFile" uid="uid://xfehdl70wchs" path="res://Data/Fonts/nintendo-nes-font.otf" id="1_r7qr8"]
[ext_resource type="Shader" uid="uid://dsgnsw78tw80s" path="res://Shaders/game_manager.gdshader" id="2_5a81j"]
[ext_resource type="Texture2D" uid="uid://dsjm1g5fmiecs" path="res://Sprites/Backgrounds/Background_flappy.png" id="3_6u3uv"]
[ext_resource type="Texture2D" uid="uid://clmeij06j2u0b" path="res://Sprites/Backgrounds/Normal_Floor.png" id="4_ekb2d"]
[ext_resource type="Texture2D" uid="uid://cyt5amwx2rgfr" path="res://Sprites/Backgrounds/Background_Normal.png" id="5_4sb7q"]
[ext_resource type="Texture2D" uid="uid://cu8kdm2eeilg8" path="res://Sprites/Backgrounds/Background_G-Switch.png" id="7_4sb7q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2bm1k"]
resource_local_to_scene = true
shader = ExtResource("2_5a81j")
shader_parameter/intensity = 0.0
shader_parameter/glitch_frequency = 2.0
shader_parameter/glitch_duration = 0.1
shader_parameter/red_displacement = 0.02
shader_parameter/green_displacement = 0.02
shader_parameter/blue_displacement = 0.02
shader_parameter/scanline_intensity = 0.3
shader_parameter/noise_intensity = 0.2
shader_parameter/slice_intensity = 0.4
shader_parameter/ghost_intensity = 0.1
shader_parameter/negative_intensity = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_68yqx"]
resource_local_to_scene = true
shader = ExtResource("2_5a81j")
shader_parameter/intensity = 0.0
shader_parameter/glitch_frequency = 2.0
shader_parameter/glitch_duration = 0.1
shader_parameter/red_displacement = 0.02
shader_parameter/green_displacement = 0.02
shader_parameter/blue_displacement = 0.02
shader_parameter/scanline_intensity = 0.3
shader_parameter/noise_intensity = 1.0
shader_parameter/slice_intensity = 0.4
shader_parameter/ghost_intensity = 0.1
shader_parameter/negative_intensity = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t3vxx"]
resource_local_to_scene = true
shader = ExtResource("2_5a81j")
shader_parameter/intensity = 0.0
shader_parameter/glitch_frequency = 2.0
shader_parameter/glitch_duration = 0.1
shader_parameter/red_displacement = 0.02
shader_parameter/green_displacement = 0.02
shader_parameter/blue_displacement = 0.02
shader_parameter/scanline_intensity = 0.3
shader_parameter/noise_intensity = 0.2
shader_parameter/slice_intensity = 0.4
shader_parameter/ghost_intensity = 0.1
shader_parameter/negative_intensity = 0.0

[node name="game_menu" type="Node2D"]
script = ExtResource("1_in7i6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Control"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.188272
anchor_bottom = 0.188272
offset_left = 2.0
offset_top = 3.0
offset_right = 1151.0
offset_bottom = 147.0
theme_override_fonts/font = ExtResource("1_r7qr8")
theme_override_font_sizes/font_size = 50
text = "DINASOUR GAME
DIMENTIONAL MERGE"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.188272
anchor_right = 0.00260417
anchor_bottom = 0.188272
offset_top = 151.0
offset_right = 1149.0
offset_bottom = 295.0
theme_override_fonts/font = ExtResource("1_r7qr8")
theme_override_font_sizes/font_size = 37
text = "PRESS SPACE TO START"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Flappy_Background" type="TextureRect" parent="CanvasLayer/Control"]
visible = false
material = SubResource("ShaderMaterial_2bm1k")
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("3_6u3uv")

[node name="Normal_Backgrounds" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Normal_Background" type="TextureRect" parent="CanvasLayer/Control/Normal_Backgrounds"]
material = SubResource("ShaderMaterial_2bm1k")
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("5_4sb7q")

[node name="Normal_Floor" type="TextureRect" parent="CanvasLayer/Control/Normal_Backgrounds"]
texture_filter = 1
material = SubResource("ShaderMaterial_68yqx")
offset_top = 315.0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("4_ekb2d")

[node name="G-Switch_Background" type="TextureRect" parent="CanvasLayer/Control"]
visible = false
material = SubResource("ShaderMaterial_t3vxx")
offset_left = -5.0
offset_top = 1.0
offset_right = 1206.0
offset_bottom = 732.0
texture = ExtResource("7_4sb7q")

[node name="SwitchTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="GlitchTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SwitchTimer" to="." method="_on_switch_timer_timeout"]
[connection signal="timeout" from="GlitchTimer" to="." method="_on_glitch_timer_timeout"]
